--- a/style.css
+++ b/style.css
@@ -166,6 +166,11 @@
                            padding: 18px;
                            box-shadow: var(--shadow);
                        }
+                       img.avatar {
+                           width: 100%;
+                           height: auto;
+                           border-radius: 50%;
+                       }
                        
                        .avatar {
                            aspect-ratio: 1/1;
